--- a/index.html
+++ b/index.html
@@ -3,90 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox/dist/basicLightbox.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <ul class="gallery">
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="./images/section-1/1.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="small-image.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="small-image.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="small-image.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="small-image.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="small-image.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="small-image.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
-      <li class="gallery-item">
-        <a class="gallery-link" href="large-image.jpg">
-          <img
-            class="gallery-image"
-            src="small-image.jpg"
-            data-source="large-image.jpg"
-            alt="Image description"
-          />
-        </a>
-      </li>
       <li class="gallery-item">
         <a class="gallery-link" href="large-image.jpg">
           <img
@@ -98,6 +23,8 @@
         </a>
       </li>
     </ul>
-    <script src="./js/gallery.js" defer></script>
+
+    <script src="./js/gallery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox/dist/basicLightbox.min.js"></script>
   </body>
 </html>
